bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  if ((Math.abs(100-n)<=10)||(Math.abs(200-n))){
    return true
  }
      else{
        return false
      }
}